created class MDP and method update_Q

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MDP:\n",
+    "    def __init__(self, max_iterations, discount_factor):\n",
+    "        tmp_Q = np.ndarray((4, 12, 4))\n",
+    "        self.V = np.ndarray((4, 12))\n",
+    "        self.Q = np.ndarray((4, 12, 4))\n",
+    "        self.pi = np.ndarray((4, 12))\n",
+    "        self.max_iter = max_iterations\n",
+    "        self.gama = discount_factor\n",
+    "\n",
+    "    def update_Q(self):\n",
+    "        di = [-1, 0, 1, 0]\n",
+    "        dj = [0, 1, 0, -1]\n",
+    "        for i in range(4):\n",
+    "            for j in range(12):\n",
+    "                for k in range(4):\n",
+    "                    self.Q[i, j, k] = 0\n",
+    "                    for action in [UP, RIGHT, DOWN, LEFT]:\n",
+    "                        if k != action and action%2 == k%2:\n",
+    "                            continue\n",
+    "                        next_state = tuple(i+di[action], j+dj[action])\n",
+    "                        self.Q[i, j, k] += 1/3*( self.reward(next_state) + self.gama*self.V[next_state])\n",
+    "                    \n",
+    "        for i in range(4):\n",
+    "            for j in range(12):\n",
+    "                self.V[i, j] = max(self.Q[i, j])\n",
+    "                    \n",
+    "                    \n",
+    "    def upadte_pi(self):\n",
+    "        pass\n",
+    "    def reward(self):\n",
+    "        pass\n",
+    "\n",
+    "    def check_convergence(self):\n",
+    "        return self.Q == self.tmp_Q\n",
+    "\n",
+    "    def run(self):\n",
+    "        iter_cnt = 0\n",
+    "        converged = 0\n",
+    "        convergance_num = 20\n",
+    "        while iter_cnt < self.max_iter and not converged<convergance_num:\n",
+    "            self.update_Q()\n",
+    "            self.update_pi()\n",
+    "            if self.check_convergence():\n",
+    "                convergance += 1\n",
+    "            else:\n",
+    "                convergance = 0\n",
+    "\n",
+    "            iter_cnt += 1\n",
+    "\n",
+    "        return self.pi\n",
+    "            \n",
+    "mdp = MDP(1000, 0.1)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,11 +290,11 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Perform the action and receive feedback from the environment\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m next_state, reward, done, truncated, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mif\u001b[39;00m done \u001b[39mor\u001b[39;00m truncated:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     observation, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mreset()\n",
-      "\u001b[1;32m/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb Cell 4\u001b[0m line \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m         \u001b[39mcase\u001b[39;00m \u001b[39m3\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=92'>93</a>\u001b[0m             action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice([\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], p\u001b[39m=\u001b[39m[\u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=94'>95</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[0;32m~/blue/uni/vs_jup_env/lib/python3.11/site-packages/gymnasium/envs/toy_text/cliffwalking.py:181\u001b[0m, in \u001b[0;36mCliffWalkingEnv.step\u001b[0;34m(self, a)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlastaction \u001b[39m=\u001b[39m a\n\u001b[1;32m    180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender()\n\u001b[1;32m    182\u001b[0m \u001b[39mreturn\u001b[39;00m (\u001b[39mint\u001b[39m(s), r, t, \u001b[39mFalse\u001b[39;00m, {\u001b[39m\"\u001b[39m\u001b[39mprob\u001b[39m\u001b[39m\"\u001b[39m: p})\n",
-      "File \u001b[0;32m~/blue/uni/vs_jup_env/lib/python3.11/site-packages/gymnasium/envs/toy_text/cliffwalking.py:206\u001b[0m, in \u001b[0;36mCliffWalkingEnv.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_render_text()\n\u001b[1;32m    205\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 206\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_render_gui(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender_mode)\n",
-      "\u001b[1;32m/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=177'>178</a>\u001b[0m     pygame\u001b[39m.\u001b[39mevent\u001b[39m.\u001b[39mpump()\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=178'>179</a>\u001b[0m     pygame\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=179'>180</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclock\u001b[39m.\u001b[39;49mtick(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmetadata[\u001b[39m\"\u001b[39;49m\u001b[39mrender_fps\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=180'>181</a>\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# rgb_array\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=181'>182</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mtranspose(\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=182'>183</a>\u001b[0m         np\u001b[39m.\u001b[39marray(pygame\u001b[39m.\u001b[39msurfarray\u001b[39m.\u001b[39mpixels3d(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwindow_surface)), axes\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/lash/blue/uni/AI/MDP/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=183'>184</a>\u001b[0m     )\n",
+      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Perform the action and receive feedback from the environment\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m next_state, reward, done, truncated, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mif\u001b[39;00m done \u001b[39mor\u001b[39;00m truncated:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     observation, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mreset()\n",
+      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m         \u001b[39mcase\u001b[39;00m \u001b[39m3\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m             action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice([\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], p\u001b[39m=\u001b[39m[\u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
+      "File \u001b[0;32m~/dev/ai/basics/project2/mdp-darcodezan/venv/lib/python3.10/site-packages/gymnasium/envs/toy_text/cliffwalking.py:181\u001b[0m, in \u001b[0;36mCliffWalkingEnv.step\u001b[0;34m(self, a)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlastaction \u001b[39m=\u001b[39m a\n\u001b[1;32m    180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender()\n\u001b[1;32m    182\u001b[0m \u001b[39mreturn\u001b[39;00m (\u001b[39mint\u001b[39m(s), r, t, \u001b[39mFalse\u001b[39;00m, {\u001b[39m\"\u001b[39m\u001b[39mprob\u001b[39m\u001b[39m\"\u001b[39m: p})\n",
+      "File \u001b[0;32m~/dev/ai/basics/project2/mdp-darcodezan/venv/lib/python3.10/site-packages/gymnasium/envs/toy_text/cliffwalking.py:206\u001b[0m, in \u001b[0;36mCliffWalkingEnv.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_render_text()\n\u001b[1;32m    205\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 206\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_render_gui(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender_mode)\n",
+      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=174'>175</a>\u001b[0m     pygame\u001b[39m.\u001b[39mevent\u001b[39m.\u001b[39mpump()\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=175'>176</a>\u001b[0m     pygame\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=176'>177</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclock\u001b[39m.\u001b[39;49mtick(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmetadata[\u001b[39m\"\u001b[39;49m\u001b[39mrender_fps\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=177'>178</a>\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# rgb_array\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=178'>179</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mtranspose(\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=179'>180</a>\u001b[0m         np\u001b[39m.\u001b[39marray(pygame\u001b[39m.\u001b[39msurfarray\u001b[39m.\u001b[39mpixels3d(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwindow_surface)), axes\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=180'>181</a>\u001b[0m     )\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     },
@@ -281,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
