update_QV reward update_pi with some bugs

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,20 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MDP:\n",
-    "    def __init__(self, max_iterations, discount_factor):\n",
-    "        tmp_Q = np.ndarray((4, 12, 4))\n",
-    "        self.V = np.ndarray((4, 12))\n",
-    "        self.Q = np.ndarray((4, 12, 4))\n",
-    "        self.pi = np.ndarray((4, 12))\n",
+    "    def __init__(self, max_iterations, discount_factor, cliff_positions):\n",
+    "        tmp_Q = np.zeros((4, 12, 4))\n",
+    "        self.V = np.zeros((4, 12))\n",
+    "        self.Q = np.zeros((4, 12, 4))\n",
+    "        self.pi = np.zeros((4, 12), dtype=int)\n",
     "        self.max_iter = max_iterations\n",
     "        self.gama = discount_factor\n",
+    "        self.cliffs = cliff_positions\n",
     "\n",
-    "    def update_Q(self):\n",
+    "    def reward(self, state):\n",
+    "        if state in self.cliffs:\n",
+    "            return -100\n",
+    "        elif state == (3, 11):\n",
+    "            return 500\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "    def update_QV(self):\n",
+    "        print(\"start QV update\")\n",
     "        di = [-1, 0, 1, 0]\n",
     "        dj = [0, 1, 0, -1]\n",
     "        for i in range(4):\n",
@@ -244,13 +254,22 @@
     "                    \n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
-    "                self.V[i, j] = max(self.Q[i, j])\n",
+    "                self.V[i, j] = 0\n",
+    "                for k in range(4):\n",
+    "                    self.V[i, j] = max(self.Q[i, j, k], self.V[i, j])\n",
+    "        print(\"done QV update\")\n",
     "                    \n",
     "                    \n",
     "    def upadte_pi(self):\n",
-    "        pass\n",
-    "    def reward(self):\n",
-    "        pass\n",
+    "        print(\"start pi update\")\n",
+    "        for i in range(4):\n",
+    "            for j in range(12):\n",
+    "                for action in [UP, RIGHT, DOWN, LEFT]:\n",
+    "                    if self.Q[i, j, action] == self.V[i, j]:\n",
+    "                        self.pi[i, j] = action\n",
+    "        print(\"done pi update\")\n",
+    "\n",
+    "\n",
     "\n",
     "    def check_convergence(self):\n",
     "        return self.Q == self.tmp_Q\n",
@@ -260,18 +279,19 @@
     "        converged = 0\n",
     "        convergance_num = 20\n",
     "        while iter_cnt < self.max_iter and not converged<convergance_num:\n",
-    "            self.update_Q()\n",
-    "            self.update_pi()\n",
+    "            self.update_QV()\n",
     "            if self.check_convergence():\n",
     "                convergance += 1\n",
     "            else:\n",
     "                convergance = 0\n",
     "\n",
     "            iter_cnt += 1\n",
+    "        self.update_pi()\n",
     "\n",
-    "        return self.pi\n",
+    "        # print(self.pi, self.Q, self.V)\n",
     "            \n",
-    "mdp = MDP(1000, 0.1)\n",
+    "    def policy(self, state):\n",
+    "        return self.pi[state[0], state[1]]\n",
     "\n",
     "\n",
     "        \n",
@@ -280,52 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Perform the action and receive feedback from the environment\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m next_state, reward, done, truncated, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mif\u001b[39;00m done \u001b[39mor\u001b[39;00m truncated:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     observation, info \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mreset()\n",
-      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m         \u001b[39mcase\u001b[39;00m \u001b[39m3\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m             action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice([\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], p\u001b[39m=\u001b[39m[\u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[0;32m~/dev/ai/basics/project2/mdp-darcodezan/venv/lib/python3.10/site-packages/gymnasium/envs/toy_text/cliffwalking.py:181\u001b[0m, in \u001b[0;36mCliffWalkingEnv.step\u001b[0;34m(self, a)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlastaction \u001b[39m=\u001b[39m a\n\u001b[1;32m    180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender()\n\u001b[1;32m    182\u001b[0m \u001b[39mreturn\u001b[39;00m (\u001b[39mint\u001b[39m(s), r, t, \u001b[39mFalse\u001b[39;00m, {\u001b[39m\"\u001b[39m\u001b[39mprob\u001b[39m\u001b[39m\"\u001b[39m: p})\n",
-      "File \u001b[0;32m~/dev/ai/basics/project2/mdp-darcodezan/venv/lib/python3.10/site-packages/gymnasium/envs/toy_text/cliffwalking.py:206\u001b[0m, in \u001b[0;36mCliffWalkingEnv.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_render_text()\n\u001b[1;32m    205\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 206\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_render_gui(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender_mode)\n",
-      "\u001b[1;32m/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=174'>175</a>\u001b[0m     pygame\u001b[39m.\u001b[39mevent\u001b[39m.\u001b[39mpump()\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=175'>176</a>\u001b[0m     pygame\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=176'>177</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclock\u001b[39m.\u001b[39;49mtick(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmetadata[\u001b[39m\"\u001b[39;49m\u001b[39mrender_fps\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=177'>178</a>\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# rgb_array\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=178'>179</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mtranspose(\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=179'>180</a>\u001b[0m         np\u001b[39m.\u001b[39marray(pygame\u001b[39m.\u001b[39msurfarray\u001b[39m.\u001b[39mpixels3d(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwindow_surface)), axes\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/pouya/dev/ai/basics/project2/mdp-darcodezan/cliff_walking.ipynb#W3sZmlsZQ%3D%3D?line=180'>181</a>\u001b[0m     )\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the maximum number of iterations\n",
     "max_iter_number = 1000\n",
     "\n",
+    "mdp = MDP(1000, 0.5, env.cliff_positions)\n",
+    "mdp.run()\n",
+    "\n",
+    "current_state = (3, 0)\n",
     "for __ in range(max_iter_number):\n",
     "    # TODO: Implement the agent policy here\n",
     "    # Note: .sample() is used to sample random action from the environment's action space\n",
     "\n",
     "    # Choose an action (Replace this random action with your agent's policy)\n",
-    "    action = env.action_space.sample()\n",
+    "    print(current_state)\n",
+    "    action = mdp.policy(current_state)\n",
+    "    print(action)\n",
     "\n",
     "    # Perform the action and receive feedback from the environment\n",
     "    next_state, reward, done, truncated, info = env.step(action)\n",
+    "    current_state = (next_state//12, next_state%12)\n",
     "\n",
     "    if done or truncated:\n",
     "        observation, info = env.reset()\n",
     "\n",
     "# Close the environment\n",
-    "env.close()"
+    "env.close()\n"
    ]
   }
  ],
