--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,13 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MDP:\n",
     "    def __init__(self, max_iterations, discount_factor, cliff_positions):\n",
-    "        tmp_Q = np.zeros((4, 12, 4))\n",
+    "        self.tmp_V = np.zeros((4, 12))\n",
     "        self.V = np.zeros((4, 12))\n",
     "        self.Q = np.zeros((4, 12, 4))\n",
     "        self.pi = np.zeros((4, 12), dtype=int)\n",
@@ -249,18 +249,21 @@
     "                    for action in [UP, RIGHT, DOWN, LEFT]:\n",
     "                        if k != action and action%2 == k%2:\n",
     "                            continue\n",
-    "                        next_state = tuple(i+di[action], j+dj[action])\n",
-    "                        self.Q[i, j, k] += 1/3*( self.reward(next_state) + self.gama*self.V[next_state])\n",
+    "                        next_state = [i+di[action], j+dj[action]]\n",
+    "                        #self.Q[i, j, k] += (1/3*( self.reward(next_state) + self.gama*self.V[next_state]))\n",
+    "                        \n",
+    "\n",
     "                    \n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
     "                self.V[i, j] = 0\n",
     "                for k in range(4):\n",
     "                    self.V[i, j] = max(self.Q[i, j, k], self.V[i, j])\n",
+    "        self.tmp_V = self.V\n",
     "        print(\"done QV update\")\n",
     "                    \n",
     "                    \n",
-    "    def upadte_pi(self):\n",
+    "    def update_pi(self):\n",
     "        print(\"start pi update\")\n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
@@ -272,23 +275,23 @@
     "\n",
     "\n",
     "    def check_convergence(self):\n",
-    "        return self.Q == self.tmp_Q\n",
+    "        return self.V.all() == self.tmp_V.all()\n",
     "\n",
     "    def run(self):\n",
     "        iter_cnt = 0\n",
     "        converged = 0\n",
     "        convergance_num = 20\n",
-    "        while iter_cnt < self.max_iter and not converged<convergance_num:\n",
+    "        while iter_cnt < self.max_iter and converged<convergance_num:\n",
     "            self.update_QV()\n",
     "            if self.check_convergence():\n",
-    "                convergance += 1\n",
+    "                converged += 1\n",
     "            else:\n",
-    "                convergance = 0\n",
+    "                converged = 0\n",
     "\n",
     "            iter_cnt += 1\n",
     "        self.update_pi()\n",
     "\n",
-    "        # print(self.pi, self.Q, self.V)\n",
+    "        print(self.pi, self.Q, self.V)\n",
     "            \n",
     "    def policy(self, state):\n",
     "        return self.pi[state[0], state[1]]\n",
@@ -302,7 +305,391 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start QV update\n",
+      "done QV update\n",
+      "start pi update\n",
+      "done pi update\n",
+      "[[3 3 3 3 3 3 3 3 3 3 3 3]\n",
+      " [3 3 3 3 3 3 3 3 3 3 3 3]\n",
+      " [3 3 3 3 3 3 3 3 3 3 3 3]\n",
+      " [3 3 3 3 3 3 3 3 3 3 3 3]] [[[0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0.]]] [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(3, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(0, 0)\n",
+      "3\n",
+      "(1, 0)\n",
+      "3\n",
+      "(2, 0)\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the maximum number of iterations\n",
     "max_iter_number = 1000\n",
@@ -334,7 +721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vs_jup_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -348,9 +735,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
